--- a/css/typed-text.css
+++ b/css/typed-text.css
@@ -2,7 +2,8 @@
     /* font-family: 'Waiting for the Sunrise', cursive;  */
     font-family: 'Alfa Slab One', cursive;
     font-size:32px; 
-    margin:  20px; 
+    margin:  12px 12px; 
+    padding: 20px 20px ;
     letter-spacing: 2px; 
     font-weight:200;
     background-color: black;
