--- a/css/retro-navbar.scss
+++ b/css/retro-navbar.scss
@@ -14,7 +14,7 @@ $start-rot : 190deg;
 
 html, body { height: 100%; }
 body {
-	background: beige;
+	background: rgb(10, 10, 10);
 	font-family: Alegreya Sans, sans-serif;
 }
 
