remove text from set-card

--- a/css/bidding-detail-cards.scss
+++ b/css/bidding-detail-cards.scss
@@ -121,11 +121,12 @@ body {
 }
 
 .card-box {
-	margin: 130px auto;
-	max-width: 460px;
+	margin: 10px auto;
+	max-width: 1000px;
 }
 
 .big-card {
+	margin: 0%;
 	background: linear-gradient(135deg, #24c6dc, #514a9d);
 	padding: 1em 1em 1em 1em;
 	border-radius: 10px;
