--- a/css/bidding-detail-cards.css
+++ b/css/bidding-detail-cards.css
@@ -104,10 +104,11 @@ body {
   font-family: "Lato", Helvetica, sans-serif; }
 
 .card-box {
-  margin: 130px auto;
-  max-width: 460px; }
+  margin: 10px auto;
+  max-width: 1000px; }
 
 .big-card {
+  margin: 0%;
   background: linear-gradient(135deg, #24c6dc, #514a9d);
   padding: 1em 1em 1em 1em;
   border-radius: 10px;
