--- a/css/bidding-detail-cards.css
+++ b/css/bidding-detail-cards.css
@@ -114,7 +114,8 @@ body {
   border-radius: 10px;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.3);
   z-index: 2;
-  position: relative; }
+  position: relative;
+  height: 160px; }
   .big-card .card-header {
     display: flex;
     width: 100%;
@@ -169,6 +170,7 @@ body {
 .set-card {
   background: linear-gradient(to right, #bc4e9c, #f80759);
   width: 100%;
+  height: 200px;
   margin-bottom: 1.4em;
   border-radius: 10px;
   box-sizing: border-box;
