--- a/css/bidding-detail-cards.scss
+++ b/css/bidding-detail-cards.scss
@@ -123,6 +123,7 @@ body {
 .card-box {
 	margin: 10px auto;
 	max-width: 768px;
+
 }
 
 .big-card {
@@ -133,6 +134,7 @@ body {
 	box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.3);
 	z-index: 2;
 	position: relative;
+	height: 160px;
 	.card-header {
 		display: flex;
 		width: 100%;
@@ -198,6 +200,7 @@ body {
 .set-card {
 	background: linear-gradient(to right, #bc4e9c, #f80759);
 	width: 100%;
+	height: 200px;
 	margin-bottom: 1.4em;
 	border-radius: 10px;
 	box-sizing: border-box;
