add an alternative index

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -70,7 +70,7 @@ body {
     position: relative;
     display: inline-block;
     
-    text-align: center;
+    text-align: left;
   }
   
   .flag {
