--- a/css/countdown.css
+++ b/css/countdown.css
@@ -4,6 +4,10 @@
 	background: #353535;
 } */
 #countdown{
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	margin-bottom: 40px;
 	width: 465px;
 	height: 112px;
 	text-align: center;
@@ -15,7 +19,7 @@
 	border: 1px solid #111;
 	border-radius: 5px;
 	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
-	margin: auto;
+	/* margin: auto; */
 	padding: 24px 0;
 	position: relative;
   top: 0; bottom: 0; left: 0; right: 0;
