--- a/css/timeline.css
+++ b/css/timeline.css
@@ -205,7 +205,7 @@ body {
   }
   
   .flag {
-          background: rgb(255,255,255);
+          background: rgb(90, 82, 82);
           z-index: 15;
   }
   
