--- a/css/brutal-layout.css
+++ b/css/brutal-layout.css
@@ -16,28 +16,20 @@ body {
   }
   
 
-  /* #navbar > nav {
-    margin: 4px;
-    padding: 5px;
-    background: #ffffff;
-    flex: 3 1 60%;
-    order: 2;
-  } */
   #left-pane > aside {
     margin: 4px;
     padding: 5px;
-    background: #41ead4;
+    background: #202225;
     flex: 1 6 20%;
     order: 3;
     font-weight:bold;
-
   }
 
   /* 
    */
 
    #boo > aside {
-    width: 40%;
+    width: 30%;
     padding-left: .5rem;
     margin-left: .5rem;
     float: right;
@@ -46,8 +38,8 @@ body {
     color: #29627e;
 }
 
-boo > aside > p {
-    margin: .5rem;
+#boo > aside > p {
+    margin: .3rem;
 }
 
 p {
@@ -57,6 +49,7 @@ p {
    
 /* 
  */
+
 
   #main > article {
     margin: 4px;
@@ -83,16 +76,30 @@ p {
     font-weight:bold;
 
   }
+
+  #main > aside > h2 {
+    transform: rotate(90deg);
+  }
   
   header {
+    font-size: 1.5em;
     font-weight:bold;
-
     display: block;
     margin: 4px;
-    padding: 5px;
+    padding: 10px;
     min-height: 60px;
     background: #ff206e;
   }
+
+  /* header > .left-say {
+    font-size: 2em;
+    font-weight:bold;
+    display: block;
+    margin: 4px;
+    padding: 10px;
+    min-height: 200px;
+  } */
+
 
   footer {
     font-weight:bold;
@@ -104,7 +111,7 @@ p {
     background: #ff8120;
   }
 
-  @media all and (max-width: 640px) {
+  @media all and (max-width: 768px) {
       #main, #page {
         flex-direction: column;
       }
@@ -117,6 +124,41 @@ p {
         min-height: 50px;
         max-height: 50px;
       }
+
+      #main > aside {
+        background: none;
+        margin-bottom: 40px;
+        margin-top: 4px;
+      }
       
+      #main > aside > h2 {
+        transform: none;
+        font-size: 3rem;
+        margin-bottom: 40px;
+        margin-top: 4px;
+        /* margin-left: 2px;
+        margin-right: 2px; */
+
+      }
+
+      #main > aside > details {
+      
+        /* transform: none; */
+        font-size: 3rem;
+        margin-bottom: 4px;
+        margin-top: 4px;
+    
+    
+      }
+
+      /* #aside-slogan > h2{
+        display: none;
+      } */
+
   }
+
+  a {
+    all: unset;
+  }
+
   
