--- a/css/brutal-layout.css
+++ b/css/brutal-layout.css
@@ -118,7 +118,7 @@ p {
     margin: 4px;
     padding: 5px;
     min-height: 60px;
-    background: #ff8120;
+    background: #faf8f6;
   }
 
   @media all and (max-width: 768px) {
