--- a/css/brutal-layout.css
+++ b/css/brutal-layout.css
@@ -138,12 +138,21 @@ p {
       #main > aside {
         background: none;
         margin-bottom: 40px;
+
+
+      }
+
+      #left-pane > aside {
+        background: none;
+        margin-bottom: 8px;
         margin-top: 4px;
+        background: #ff206e; padding-bottom: 120px;
+
       }
       
       #main > aside > h2 {
         transform: none;
-        font-size: 3rem;
+        font-size: 2em;
         margin-bottom: 40px;
         margin-top: 4px;
         /* margin-left: 2px;
@@ -152,7 +161,6 @@ p {
       }
 
       #main > aside > details {
-      
         /* transform: none; */
         font-size: 2rem;
         margin-bottom: 4px;
