--- a/css/brutal-layout.css
+++ b/css/brutal-layout.css
@@ -98,7 +98,8 @@ p {
     margin: 4px;
     padding: 10px;
     min-height: 60px;
-    background: #ff206e;
+    background: black;
+    color: white;
   }
 
   /* header > .left-say {
@@ -146,7 +147,7 @@ p {
         background: none;
         margin-bottom: 8px;
         margin-top: 4px;
-        background: #ff206e; padding-bottom: 120px;
+        background: #0c0c0c; padding-bottom: 120px;
 
       }
       
