--- a/css/horizontal-timeline.css
+++ b/css/horizontal-timeline.css
@@ -56,6 +56,7 @@ h2 {
   overflow: hidden;
   margin: auto auto;
   position: relative;
+  margin-top: 50px;
   /* background: url('../images/dot.gif') left 45px repeat-x; */
 }
 
