--- a/css/horizontal-timeline.css
+++ b/css/horizontal-timeline.css
@@ -52,11 +52,11 @@ h2 {
 #timeline {
   color: white;
   width: 800px;
-  height: 450px;
+  height: 500px;
   overflow: hidden;
   margin: auto auto;
   position: relative;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   /* background: url('../images/dot.gif') left 45px repeat-x; */
 }
 
@@ -94,12 +94,13 @@ h2 {
 
 #issues li {
   width: 800px;
-  height: 850px;
+  height: 650px;
   list-style: none;
   float: left;
 }
 
 #issues li.selected img {
+  max-height: 650px;
   /* -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
   -o-transform: scale(1.1, 1.1);
@@ -108,7 +109,10 @@ h2 {
 }
 
 #issues li img {
-  float: left;
+  /* max-height: 800px; */
+  height: 40%;
+
+  /* float: left; */
   /* margin: 10px 30px 10px 50px; */
   background: black;
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF)";
@@ -117,7 +121,7 @@ h2 {
   filter: progid: DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF, endColorstr=#00FFFFFF);
   /* IE 6 & 7 */
   
-  zoom: 1;
+  /* zoom: 1;
   -webkit-transition: all 2s ease-in-out;
   -moz-transition: all 2s ease-in-out;
   -o-transition: all 2s ease-in-out;
@@ -127,7 +131,7 @@ h2 {
   -moz-transform: scale(0.7, 0.7);
   -o-transform: scale(0.7, 0.7);
   -ms-transform: scale(0.7, 0.7);
-  transform: scale(0.7, 0.7);
+  transform: scale(0.7, 0.7); */
 }
 
 #issues li h1 {
@@ -142,10 +146,13 @@ h2 {
 #issues li p {
   font-size: .8em;
   margin-right: 70px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   margin-left: 70px;
   font-weight: normal;
   line-height: 22px;
   text-shadow: #000 1px 1px 2px;
+
 }
 
 #grad_left,
