--- a/css/brutal-layout.css
+++ b/css/brutal-layout.css
@@ -64,6 +64,12 @@ p {
     flex: 3 1 100%;
     order: 2;
   }
+
+  #main > article > .iframe-video {
+    width: 100%;
+    height: 544px;
+    margin: auto;
+  }
   
   #main > nav {
     margin: 4px;
@@ -139,8 +145,12 @@ p {
       #main > aside {
         background: none;
         margin-bottom: 40px;
+      }
 
-
+      #main > article > .iframe-video {
+        width: 100%;
+        height: 440px;
+        margin: auto;
       }
 
       #left-pane > aside {
