--- a/css/horizontal-timeline.css
+++ b/css/horizontal-timeline.css
@@ -79,16 +79,17 @@ h2 {
 #dates a {
   line-height: 38px;
   padding-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 #dates .selected {
-  font-size: 38px;
+  font-size: 32px;
   height: 480pc;
 }
 
 #issues {
   width: 800px;
-  height: 350px;
+  height: 500px;
   overflow: hidden;
 }
 
@@ -159,19 +160,26 @@ h2 {
 #grad_left,
 #grad_right {
   width: 100px;
-  height: 350px;
+  height: 100px;
   position: absolute;
-  top: 0;
+  top: 8rem;
+  bottom: 0;
+  background-position: center;
 }
 
 #grad_left {
   left: 0;
-  /* background: url('../images/grad_left.png') repeat-y; */
+  background: url('../img/arrow-left.jpeg');
+  background-size: cover;
+
+
 }
 
 #grad_right {
   right: 0;
-  /* background: url('../images/grad_right.png') repeat-y; */
+  background: url('../img/arrow-right.jpeg') ;
+  background-size: cover;
+
 }
 
 #next,
@@ -180,9 +188,9 @@ h2 {
   top: 0;
   font-size: 70px;
   top: 170px;
-  width: 30px;
+  width: 100px;
   height: 60px;
-  background-position: 0 0;
+  /* background-position: 0 0; */
   background-repeat: no-repeat;
   text-indent: -9999px;
   overflow: hidden;
@@ -195,12 +203,17 @@ h2 {
 
 #next {
   right: 0;
-  background: red;
+  /* background: red; */
+  /* background: url(../img/arrow-right.jpeg), no-repeat !important;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  /* background : url('../img/arrow-right.jpeg'); */
 }
 
 #prev {
+ 
   left: 0;
-  background: blue;
+  /* background: blue; */
 }
 
 #next.disabled,
