--- a/css/future-timeline.css
+++ b/css/future-timeline.css
@@ -19,7 +19,7 @@
     border-top: 4px solid #06182E;
     border-radius: 16px;
     min-width: 280px;
-    max-width: 640px;
+    max-width: 580px;
     background-image: url('../img/roadmap-bg-02.jpeg');
   }
   
@@ -77,4 +77,19 @@
     position: relative;
     top: 13px;
     left: 0;
+  }
+
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  .row {
+    display: flex;
+  }
+  
+  /* Create three equal columns that sits next to each other */
+  .column {
+    flex: 33.33%;
+    padding: 5px;
   }
