--- a/css/future-timeline.css
+++ b/css/future-timeline.css
@@ -35,13 +35,13 @@
     content: '';
     display: block;
     background: #eee;
-    width: 7px;
-    height: 7px;
-    border-radius: 6px;
-    border: 3px solid #06182E;
+    width: 36px;
+    height: 36px;
+    border-radius: 2px;
+    border: 5px solid #08932b;
     position: absolute;
     left: 50%;
-    top: -30px;
+    top: -37px;
     margin-left: -6px;
   }
   
