--- a/css/future-timeline.css
+++ b/css/future-timeline.css
@@ -37,7 +37,7 @@
     background: #eee;
     width: 36px;
     height: 36px;
-    border-radius: 2px;
+    border-radius: 51px;
     border: 5px solid #08932b;
     position: absolute;
     left: 50%;
@@ -62,12 +62,14 @@
     font-size: 32px;
     /* font-family: Georgia, serif; */
     margin-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   
   .entry h2 {
     letter-spacing: .2em;
     margin-bottom: 10px;
-    font-size: 22px;
+    font-size: 40px;
     font-weight: bolder;
   }
   
